# swagger-mcp-server

./: .gitignore  CLAUDE.md  README.md  db.py  parser.py  pyproject.toml  server.py
docs/: README.md
