[project]
name = "swagger-mcp-server"
version = "0.1.0"
description = "Swagger API 문서 탐색용 MCP 서버"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mcp[cli]>=1.25.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
py-modules = ["db", "parser", "server"]
